--- a/index.html
+++ b/index.html
@@ -1062,7 +1062,7 @@ _Pedido realizado através do site._`;
         const listaProdutos = montarListaProdutos(carrinho);
         const mensagem = montarMensagemWhatsApp(nome, telefone, listaProdutos, total);
 
-        const numeroWhatsApp = "5583999999999"; // Substitua pelo seu número
+        const numeroWhatsApp = "5583981374944"; // 
         const mensagemCodificada = encodeURIComponent(mensagem);
         const urlWhatsApp = `https://wa.me/${numeroWhatsApp}?text=${mensagemCodificada}`;
 
